created db design

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             <!--right of activity for event-->
             <div class="grid_4 omega">
                 <div class="grid_4 alpha omega">
-                    _Title_
+                    ${title}&nbsp;
                 </div>
                 <div class="clear"></div>
                 <div class="grid_4 alpha omega">
-                    _timedate_ and _durration_
+                    ${start} for ${duration} hours
                 </div>
                 <div class="clear"></div>
                 <div class="grid_4 alpha omega">
-                    _location_
+                    ${location_id}
                 </div>
                 <div class="clear"></div>
                 <div class="grid_4 alpha omega">
